group 'nucleocore'
version '1.02.24'

apply plugin: 'java'
apply plugin: 'maven'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '2.1.0'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.2.3'
    compile group: 'com.101tec', name: 'zkclient', version: '0.11'
    compile group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.1.1'

    compile 'org.slf4j:slf4j-nop:1.7.25'
}

uploadArchives {
    repositories {
       mavenDeployer {
             repository(url: "http://nexus.synload.com/repository/releases/") {
                authentication(userName: "admin", password: "$System.env.PASSWORD")
             }
             pom.version = "${version}"
             pom.artifactId = "nucleocore"
             pom.groupId = "com.synload.nucleo"
       }
    }
}
